# tablofy

./: .gitignore  ACCEPTANCE_TESTS.md  API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  FEATURE_MATRIX.md  LICENSE  PRD.md  README.md  RELEASE.md  pyproject.toml
docs/: analytics.md  cleaning.md  common-errors.md  exploration.md  installation.md  loading.md  quickstart.md  reports.md  sql.md  transform.md  visualization.md
examples/: analytics_demo.py  basic_usage.py  charts_demo.py  cleaning_demo.py  exploration_demo.py  quickstart.py  report_demo.py  sql_demo.py  transform_demo.py
examples/data/: sales_data.csv
src/tablofy/: __init__.py
src/tablofy/analytics/: __init__.py  insights.py  outliers.py  stats.py  timeseries.py
src/tablofy/cleaning/: __init__.py  cleaner.py  report.py
src/tablofy/core/: __init__.py  config.py  errors.py  frame.py  loader.py  widgets.py
src/tablofy/exploration/: __init__.py  profile.py  schema.py  summary.py
src/tablofy/ml/: __init__.py  wrapper.py
src/tablofy/reports/: __init__.py  excel.py  html.py
src/tablofy/scrape/: __init__.py  wrapper.py
src/tablofy/sql/: __init__.py  duckdb_query.py
src/tablofy/stats/: __init__.py  wrapper.py
src/tablofy/transform/: __init__.py  group.py  operations.py  safe_filter.py
src/tablofy/utils/: __init__.py  formatting.py  lazy_imports.py  validation.py
src/tablofy/visualization/: __init__.py  charts.py  smart_chart.py  styles.py
tests/: __init__.py  test_analytics.py  test_cleaning.py  test_exploration.py  test_loader.py  test_reports.py  test_sql.py  test_table.py  test_transform.py  test_visualization.py
