[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tablofy"
version = "1.0.0-alpha"
description = "A beginner-friendly data analytics library wrapping pandas, matplotlib, seaborn, and DuckDB."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Tablofy Contributors" },
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.14",
    "duckdb>=0.8",
    "pyarrow>=12",
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "black>=23",
    "build>=1.0",
    "twine>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
