[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tablofy"
version = "2.1.3"
description = "A beginner-friendly data analytics library wrapping pandas, matplotlib, seaborn, and DuckDB."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sheharyar Siraj" },
]
requires-python = ">=3.9"
keywords = [
    "data analytics", "pandas", "dataframe", "visualization",
    "sql", "duckdb", "matplotlib", "seaborn", "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "duckdb>=0.8",
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/Sheharyar-ans/tablofy"
Source = "https://github.com/Sheharyar-ans/tablofy"
Issues = "https://github.com/Sheharyar-ans/tablofy/issues"
Documentation = "https://github.com/Sheharyar-ans/tablofy"

[project.optional-dependencies]
fast = [
    "polars",
    "pyarrow>=12",
]
viz = [
    "plotly>=5.14",
]
stats = [
    "scipy",
    "statsmodels",
]
ml = [
    "scikit-learn",
]
dl = [
    "torch",
    "tensorflow",
]
widgets = [
    "ipywidgets",
]
scraping = [
    "beautifulsoup4",
    "requests",
    "scrapy",
]
all = [
    "polars",
    "pyarrow>=12",
    "plotly>=5.14",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "torch",
    "tensorflow",
    "beautifulsoup4",
    "requests",
    "scrapy",
    "ipywidgets",
]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "black>=23",
    "build>=1.0",
    "twine>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tablofy" = ["reports/templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
